--- a/Shop.UI/Shop.UI.csproj
+++ b/Shop.UI/Shop.UI.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.7" />
+    <PackageReference Include="Stripe.net" Version="39.3.0" />
   </ItemGroup>
 
 </Project>
